--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,27 @@ section article header {
     border-style: solid;
     border-color: black;
 }
+* {
+    box-sizing: border-box;
+}
+.PersonInfo {
+    content: "";
+    display: table;
+    clear: both;
+    width: 100%;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+.label {
+    width: 100px;
+    display: inline-block;
+    text-align: left;
+}
 
 #Number {
     text-align: center;
@@ -101,4 +122,11 @@ section article header {
     color: #fff;
     font-family: vegan;
     font-size: 40px;
+}
+
+button {
+    border-radius: 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 20px;
 }
